updated tomcat setup